# ai-mediator

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_integration.py
docs/: DEVELOPMENT.md  STRUCTURE.md
internal/: __init__.py
internal/config/: settings.py
internal/domain/: __init__.py  entities.py
internal/external_services/: __init__.py
internal/external_services/llm/: __init__.py
internal/middleware/: error_handler.py  logging.py
internal/repository/: interface.py  mock_repository.py
internal/repository/postgres/: __init__.py
internal/transport/telegram/: __init__.py  handlers.py
internal/validation/: __init__.py
main/: __init__.py  main.py
prompts/experiments/archive/: .gitkeep
prompts/tools/: prompt_builder.py
services/api/: Dockerfile
services/api/app/: main.py
services/bot/: Dockerfile
services/bot/app/: main.py
shared/contracts/: advice_output_v1.json  llm_output_format.json  message_input_v1.json
shared/prompts/: main.md
shared/prompts/current/: mediator_v1.md  system_rules.md
shared/prompts/experiments/: 001_fast_connect.md  (+1 more)
src/: main.py
src/config/: settings.py
src/domain/: entities.py  new_entities.py
src/middleware/: __init__.py
src/repository/: interface.py  mock_repository.py
src/service/: message_service.py  session_service.py
src/transport/: __init__.py
src/validation/: telegram_validator.py
tests/: .gitkeep  conftest.py  test_telegram_handlers.py
tools/: .gitkeep  prompt_playground.py  prompt_tester.py
(+7 files in other folders)
